--- a/src/app/pages/articles/articles.component.html
+++ b/src/app/pages/articles/articles.component.html
@@ -28,7 +28,7 @@
       <article *ngFor="let article of filteredArticles; let i = index" 
                class="bg-white rounded-3xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 group cursor-pointer animate-fade-in-up"
                [style.animation-delay]="i * 0.1 + 's'"
-               [routerLink]="['/article', article.id]">
+               [routerLink]="['/article', article.slug || article.id]">
         <!-- Image -->
         <div class="aspect-[4/3] overflow-hidden relative">
           <img [src]="article.image" 
